sumo/tests/sumo/extended/emitter/errors/xml/no_begin/errors.sumo
Error: Expected comment or processing instruction
 In file 'input_definition.def.xml'
 At line/column 4/2.

Quitting (on error).
